CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)
PROJECT(c-plus-study)

MESSAGE("config types: ${CMAKE_CONFIGRATION}")

SET(CMAKE_CXX_STANDARD 11)
SET(OUTPUT_ROOT ./output)
SET(SET_TARGET_PROPERTIES ./target)
SET(CMAKE_INSTALL_PREFIX /usr/local)

ADD_SUBDIRECTORY(src/exam-01)
ADD_SUBDIRECTORY(src/unit-01)
ADD_SUBDIRECTORY(src/unit-09)

INSTALL(FILES ${PROJECT_SOURCE_DIR}/src/exam-01/tracts_number.out DESTINATION /usr/local/bin/)
