CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)
PROJECT(c-plus-study)

MESSAGE("config types: ${CMAKE_CONFIGRATION}")

SET(CMAKE_CXX_STANDARD 11)

AUX_SOURCE_DIRECTORY(. DIR_UNIT_02)

ADD_LIBRARY (str.so str.cpp)
ADD_EXECUTABLE(str.out main.cpp)

TARGET_LINK_LIBRARIES(str.out str.so )

INSTALL(TARGETS str.out
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib/static)